--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-lovers-rick-and-morty",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://merunga.github.io/data-lovers-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "typescript": "^3.9.5"
   }
 }
